team logo overlay working for each player; next step to fix design for better readability.

--- a/src/App.css
+++ b/src/App.css
@@ -41,8 +41,7 @@ img.logo {
 }
 img.team-logo {
 
-  width: 33%;
-  max-width: 80px;
+
 
 }
 
@@ -151,6 +150,7 @@ img.team-logo {
 .item-teamMarketName {
   text-align: center;
   margin-top: 1rem;
+  opacity: 1;
 }
 
 /* item main info */
